--- a/FluentPort/FluentPort.csproj
+++ b/FluentPort/FluentPort.csproj
@@ -9,15 +9,22 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Avalonia" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Desktop" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.10" />
-    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10" />
+    <!--<PackageReference
+    Include="Avalonia" Version="11.0.10" />-->
+    <!--<PackageReference
+    Include="Avalonia.Desktop" Version="11.0.10" />-->
+    <!--<PackageReference
+    Include="Avalonia.Themes.Fluent" Version="11.0.10" />-->
+    <!--<PackageReference
+    Include="Avalonia.Fonts.Inter" Version="11.0.10" />-->
     <!--Condition
     below is needed to remove Avalonia.Diagnostics package from build output in Release
     configuration.-->
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics"
-      Version="11.0.10" />
+    <PackageReference Include="Avalonia" Version="11.2.6" />
+    <PackageReference Include="Avalonia.Desktop" Version="11.2.6" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
+    <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.6" />
+    <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.6" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="SkiaSharp" Version="3.116.1" />
     <PackageReference Include="WebView.Avalonia" Version="11.0.0.1" />
