--- a/FluentPort/FluentPort.csproj
+++ b/FluentPort/FluentPort.csproj
@@ -22,7 +22,8 @@
     configuration.-->
     <PackageReference Include="Avalonia" Version="11.2.6" />
     <PackageReference Include="Avalonia.Desktop" Version="11.2.6" />
-    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10" />
+    <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics"
+      Version="11.0.10" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.2.6" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.6" />
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
